--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "email": "cpuzzuol@emich.edu"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {},
     "extra": {
         "laravel": {
